# generic-array-derive

./: README.md  rust-toolchain.toml
.github/workflows/: ci.yml  publish.yml
generic-bytes/: Cargo.toml
generic-bytes-derive/: Cargo.toml
generic-bytes-derive/src/: lib.rs
