# Copyright (c) Facebook, Inc. and its affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

[package]
name = "generic-bytes-derive"
version = "0.2.2"
repository = "https://github.com/huitseeker/generic-array-derive"
keywords = ["bytes", "generic", "macro"]
description = "A macro for derivation of SizedBytes, a trait for conversion to and from an array of bytes with a type-level size"
authors = ["François Garillot <rancois@garillot.netm>"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.13", features = ["derive"] }
quote = "1.0.21"
proc-macro2 = "1.0.43"

[dev-dependencies]
anyhow = "1.0.65"
generic-bytes = { version = "0.2.1", path = "../generic-bytes" }
generic-array = "0.14.6"
