# Copyright (c) Facebook, Inc. and its affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

[package]
name = "generic-bytes"
version = "0.2.3"
repository = "https://github.com/huitseeker/generic-array-derive"
keywords = ["bytes", "generic", "macro"]
description = "A derivable trait for conversion to and from an array of bytes with a type-level size"
authors = ["François Garillot <francois@garillot.net>"]
license = "MIT"
edition = "2018"
readme = "../README.md"
rust-version = "1.63.0"

[dependencies]
generic-array = "0.14.6"
